[package]
name = "rust-odbc-example"
version = "0.1.0"
authors = ["jianglibo <jianglibo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
odbc = "0.16.1"
log = "0.4"
env_logger = "0.7.1"
failure = "0.1"
log4rs = { version = "0.11.0", features = [
    "all_components",
    "file",
    "yaml_format"
] }

[dependencies.clap]
version = "~2.33"
default-features = false
features = ["suggestions", "color", "yaml"]